Added preliminary firmware for modules

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:blackpill_f401cc]
+[env:bluepill]
 platform = ststm32
-board = blackpill_f401cc
+board = bluepill_f103c8
 framework = arduino
