Quasi Complete implementation of home class

--- a/platformio.cbp
+++ b/platformio.cbp
@@ -109,6 +109,7 @@
 		<Unit filename="lib/homelib/src/IRSensor.cpp" />
 		<Unit filename="lib/homelib/src/LEDDriver.cpp" />
 		<Unit filename="lib/homelib/src/PIRSensor.cpp" />
+		<Unit filename="lib/homelib/src/ShiftReg.cpp" />
 		<Unit filename="lib/homelib/src/SoilMoisture.cpp" />
 		<Unit filename="lib/homelib/src/home.cpp" />
 		<Unit filename="lib/homelib/src/home.h" />
